Add Matamata-Piako district and add in Taupo.
Signed-off-by: Stewart Cossey <stewart.cossey@gmail.com>

--- a/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
+++ b/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
@@ -21,6 +21,7 @@ thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:kerikeriwaipapa = Kerikeri / Waipapa
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:mangapai = Mangapai
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:mangawhai = Mangawhai
+thing-type.config.nzwateralerts.wateralert.location.option.matamatapiakodistrictcouncil:district:district = Matamata-Piako District
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:maungakaramea = Maungakaramea
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:maungaturoto = Maungaturoto
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:moerewakawakawa = Moerewa / Kawakawa
@@ -30,6 +31,7 @@ thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:rawene = Rawene
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:ruawai = Ruawai
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:russell = Russell
+thing-type.config.nzwateralerts.wateralert.location.option.taupodistrictcouncil:district:district = Taupō District
 thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waipa:waipa = Waipa District
 thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waikato:waikato = Waikato District
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:waitangipaihiaopua = Waitangi / Paihia / Opua
