Fix macrons for some towns/regions.
Signed-off-by: Stewart Cossey <stewart.cossey@gmail.com>

--- a/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
+++ b/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
@@ -16,8 +16,8 @@ thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:dargavilleampbaylys = Dargaville & Baylys
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:glinksgully = Glinks Gully
 thing-type.config.nzwateralerts.wateralert.location.option.smartwater:hamilton:hamilton = Hamilton City
-thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:kaikohengawha = Kaikohe / Ngawha
-thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:kaitaia = Kaitaia
+thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:kaikohengawha = Kaikohe / Ngāwhā
+thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:kaitaia = Kaitāia
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:kerikeriwaipapa = Kerikeri / Waipapa
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:mangapai = Mangapai
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:mangawhai = Mangawhai
@@ -26,8 +26,8 @@ thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:maungaturoto = Maungaturoto
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:moerewakawakawa = Moerewa / Kawakawa
 thing-type.config.nzwateralerts.wateralert.location.option.napiercitycouncil:napier:napier = Napier
-thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:okaihau = Okaihau
-thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:opononiomapere = Opononi / Omapere
+thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:okaihau = Ōkaihau
+thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:opononiomapere = Opononi / Ōmāpere
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:rawene = Rawene
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:ruawai = Ruawai
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:russell = Russell
@@ -35,7 +35,7 @@ thing-type.config.nzwateralerts.wateralert.location.option.taupodistrictcouncil:
 thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waipa:waipa = Waipa District
 thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waikato:waikato = Waikato District
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:waitangipaihiaopua = Waitangi / Paihia / Opua
-thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:whangarei = Whangarei
+thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:whangarei = Whangārei
 thing-type.config.nzwateralerts.wateralert.refreshInterval.label = Refresh Interval
 thing-type.config.nzwateralerts.wateralert.refreshInterval.description = The interval (in hours) to refresh the data.
 
