Update Matamata function and add Watercare.
Signed-off-by: Stewart Cossey <stewart.cossey@gmail.com>

--- a/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
+++ b/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
@@ -12,6 +12,7 @@ thing-type.nzwateralerts.wateralert.description = Water Alert Levels for New Zea
 
 thing-type.config.nzwateralerts.wateralert.location.label = Location
 thing-type.config.nzwateralerts.wateralert.location.description = The location to get the Water Alert level for.
+thing-type.config.nzwateralerts.wateralert.location.option.watercare:city:city = Auckland City
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:breambay = Bream Bay
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:dargavilleampbaylys = Dargaville & Baylys
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:glinksgully = Glinks Gully
@@ -25,7 +26,7 @@ thing-type.config.nzwateralerts.wateralert.location.option.matamatapiakodistrict
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:maungakaramea = Maungakaramea
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:maungaturoto = Maungaturoto
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:moerewakawakawa = Moerewa / Kawakawa
-thing-type.config.nzwateralerts.wateralert.location.option.napiercitycouncil:napier:napier = Napier
+thing-type.config.nzwateralerts.wateralert.location.option.napiercitycouncil:city:city = Napier
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:okaihau = Ōkaihau
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:opononiomapere = Opononi / Ōmāpere
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:rawene = Rawene
