Update Smart Water
Remove Waikato
Add Waitomo

Signed-off-by: Stewart Cossey <stewart.cossey@gmail.com>

--- a/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
+++ b/bundles/org.openhab.binding.nzwateralerts/src/main/resources/OH-INF/i18n/nzwateralerts.properties
@@ -33,8 +33,8 @@ thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:kaipara:ruawai = Ruawai
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:russell = Russell
 thing-type.config.nzwateralerts.wateralert.location.option.taupodistrictcouncil:district:district = Taupō District
-thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waipa:waipa = Waipa District
-thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waikato:waikato = Waikato District
+thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waipa:waipa = Waipā District
+thing-type.config.nzwateralerts.wateralert.location.option.smartwater:waitomo:waitomo = Waitomo District
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:farnorth:waitangipaihiaopua = Waitangi / Paihia / Opua
 thing-type.config.nzwateralerts.wateralert.location.option.bewaterwise:whangarei:whangarei = Whangārei
 thing-type.config.nzwateralerts.wateralert.refreshInterval.label = Refresh Interval
